# microservice-rust

./: .gitignore  Cargo.toml  Dockerfile
.github/: dependabot.yml
.github/workflows/: docker-build.yml
src/: customer.rs  lib.rs  main.rs
tests/: customer_api.rs
